Gtk-3.20: [GtkNotebook] Fix missing background expansion

--- a/gtk/sass/3.20/_common.scss
+++ b/gtk/sass/3.20/_common.scss
@@ -3411,7 +3411,7 @@ notebook {
       background-image: radial-gradient(circle farthest-side at center,
                                         transparent 12.5%,
                                         transparent 0%);
-      background-size: 100% 100%;
+      background-size: 100% * 8 100% * 8;
       transition: border-color 0.2s $slope_medium,
                   border-image 0.2s $slope_medium,
                   background-size 0.3s $slope_slow,
